Development Portal (2014-04-02 shi)
==============================
Changed Donor to Source & all instances on site
Changed description for Source title and hover states in table
Changed Publishers to Agents
Added "Back to {country_name}" to Stats pages


Development Portal (2014-04-01 shi)
==============================
Added title to Key Figures
Added more icons
Adding charts to main view
SAVi change line-height in tables for better legibility
Added Map% alert
Added Paths (buttons) on landing page
Added IATI link to landing page


Development Portal (2014-03-31 shi)
==============================
Translations in dropdown menu
Countries are now in alphabetical order
All cells are now clickable links
All font-sizes are in ems for scaling issues in screen resolutions
Refactored code into modular pages
Declarations are now in footer
Added "Reported by reporting-org" to project titles in tables
Added Active / Ended / Planned / Total / Publishers pages


Development Portal (2014-03-28 shi)
==============================
Chinese(Simplified) translation 
Changed headers of tables to be consistent


Development Portal (2014-03-27 shi)
==============================
Added Hindi and Japanese translations to test
Fixed footer bug in Firefox Win 7
Lines for legibility for tables
Added countries to Home crumb
Changed copytext


Development Portal (2014-03-26 shi)
==============================
Remaining 34 background images uploaded
Added first version of description on about / landing page
Fixed footer bug for mobile devices
Begin addition of "Workings out" footer - needs revision
Fixed table cell spacing for SAVi to improve legibility
Translations for data descriptions ("workings out")
New logo now replaces old ones where applicable
Edited about.html to reflect new changes


Development Portal (2014-03-25 shi)
==============================
All country codes are listed under ISO 3166-2
All 148 flags in (README.md in /art for more info)