@@ -178,6 +178,11 @@
 		<a href="http://d-portal.org/q.xml?limit=10&orderby=day_start&day_start_gt=1950-01-01" class="qeg">http://d-portal.org/q.xml?limit=10&amp;orderby=day_start&amp;day_start_gt=1950-01-01</a>
 		<div class="qabt">Returns XML which is automatically formatted into HTML, source remains pure XML</div>
 		<div class="qinfo">This query displays activities limiting the amount to 10 <span class="qdef">limit=10</span> sorted by starting day <span class="qdef">orderby=day_start</span> and from 1950 onwards <span class="qdef">day_start_gt=1950-01-01</span>.</div>
+		
+		<a href="http://dev.ctrack.iatistandard.org/q.xml?from=jml,act,sector,country&country=bd&sector_percent_not_null" class="qeg">http://dev.ctrack.iatistandard.org/q.xml?from=jml,act,sector,country&amp;country=bd&amp;sector_percent_not_null</a>
+		<div class="qabt">Returns XML which is automatically formatted into HTML, source remains pure XML</div>
+		<div class="qinfo">This query displays all activities within Bangladesh (country code is BD) <span class="qdef">country=bd</span> that have sectors reported in the data<span class="qdef">sector_percent_not_null</span>. Ultimately, this query allows you to look at all the activities that have graphs in them.</div>
+		
 		<a href="http://d-portal.org/q?from=act,country&groupby=reporting_org&select=stats&country_code=BD" class="qeg">http://d-portal.org/q?from=act,country&amp;groupby=reporting_org&amp;select=stats&amp;country_code=BD</a>
 		<div class="qabt">Returns JSON (JSON is default) data about activites (activites are default) where 100 rows from the database is the default limit</div>
 		<div class="qinfo">This query displays data statistics <span class="qdef">select=stats</span> about activites for each reporting organisation <span class="qdef">groupby=reporting_org</span> for Bangladesh <span class="qdef">country_code=BD</span>.</div>
