@@ -2,8 +2,9 @@ Development Portal (2014-04-02 shi)
 ==============================
 Changed Donor to Source & all instances on site
 Changed description for Source title and hover states in table
-Changed Publishers to Agents
+Changed Publishers to Agents (not internal yet)
 Added "Back to {country_name}" to Stats pages
+Added new query example to about page
 
 
 Development Portal (2014-04-01 shi)
